{assign var=numeric_naming value=0}
{foreach from=$App->user->getAuthGroups() item=group}
	{if $group->getConfig('wh_naming_numeric')}
		{assign var=numeric_naming value=1}
	{/if}
{/foreach}
<h3>April 28, 2016</h3>
<b><u>STATISTICS</u></b>
 - Statistics/leaderboard for non directors/admins could show an empty page.
<b><u>VIPPY</u></b>
 - Updated to <a href="https://community.eveonline.com/news/patch-notes/patch-notes-for-eve-online-citadel" target="_blank">Citadel</a> data export.



<h3>April 21, 2016</h3>
<b><u>STATISTICS</u></b>
 - Stat pages for previous months were broken. They are now available again.
<b><u>VIPPY</u></b>
 - Fixed adding or updating a capitalship in Profile. It could give errors on certain solarsystems.
 - wh.pasta.gg died and is replaced by <a href="http://wh.vps-city.com/" target="_blank">wh.vps-city.com</a>. Updated the links.



<h3>March 10, 2016</h3>
<b><u>STATISTICS</u></b>
 - Correctly track the amount of wormholes mapped.
<b><u>VIPPY</u></b>
 - Updated to <a href="http://community.eveonline.com/news/patch-notes/patch-notes-for-march-2016-release" target="_blank">YC118.3</a> data export.



<h3>February 29, 2016</h3>
<b><u>SCANNING</u></b>
 - Add an option on maps to not automatically name new solarsystems.
 - Add an option on maps to not create an unmapped wormhole when a new wh signature is found.
 - Add marker for systems that are marked persistant (<img src="/images/eve/pin.png">). These will not be deleted by 'DELETE ALL' or 'Remove connected systems'.
 - Editing signature: Fix a bug that disabled save on enter.
<b><u>STATISTICS</u></b>
 - Add amount of wormhole systems mapped to statistics.
 - Add an option to rank the leaderboard based on amount of systems mapped, instead of amount of signatures scanned.
<b><u>ADMIN</u></b>
 - Add an option for your access control group to also require manual authentication for each user by an admin.