@@ -39,7 +39,7 @@
 			{/if}
 			</tr>
 	{foreach from=$stats key=s item=stat}
-		{if $s<15}
+		{if $s < 10}
 			<tr class="{if $s%2==0}even{else}odd{/if}">
 				<td style="padding: 0; width: 20px; text-align: center;">
 					<img src="http://image.eveonline.com/Character/{$stat->getUser()->getMainCharacter()->id}_32.jpg"
@@ -66,12 +66,49 @@
 		{/if}
 	{/foreach}
 		</table>
-		<br />
+	</div>
+	<div class="col6 right last">
+		<div class="message">
+			<ul>
+				<li style="color: #0088ff;"><b>Please contact (corp) leadership for any questions / concerns.</b></li>
+				<li>Signatures:</li>
+				<ul>
+					<li>Newly added signatures AND updated signatures are counted.</li>
+					<li>Updating a signature that was not changed will <u>not</u> count.</li>
+				</ul>
+				<li>Wormholes:</li>
+				<ul>
+					<li>New systems that are added / mapped.</li>
+				</ul>
+				{if $authGroup->getConfig('stats_kills')}
+					<li>Score:</li>
+					<ul>
+						<li>As you know we expect everyone to contribute to the alliance in some way.</li>
+						<li>Score is an attempt to measure this based on a few metrics, some of wich are:</li>
+						<ul>
+							<li>How much game time do you have?</li>
+							<li>How much you scan?</li>
+							<li>Do you fly logi or other support ships in fleets?</li>
+						</ul>
+						<li><b>Score is <u>not</u> meant to be a hard limit but more of an <u>indication</u> to help leadership provide insight in whats going on, as there are other ways to contribute that are hard to measure.</b></li>
+					</ul>
+					<li style="color: #0088ff;"><b>Please contact (corp) leadership for any questions / concerns.</b></li>
+				{/if}
+			</ul>
+		</div>
+		<div style="clear: both;"></div>
+	</div>
+	<div style="clear:both;"></div>
+</div>
 
+<div class="content">
+	<br />
+
+	<div class="col6">
 		<table class="sectionoverview">
 			<tr>
 				<th class="large" colspan="3">
-					You
+					Your Rank
 				</th>
 				<th style="width: 70px; text-align: center;">Signatures</th>
 				<th style="width: 70px; text-align: center;">Wormholes</th>
@@ -79,9 +116,67 @@
 				<th style="width: 100px;">Score</th>
 			{/if}
 			</tr>
-	{foreach from=$stats key=s item=stat}
-		{if $stat->userID == $App->user->id}
-			<tr class="even">
+{foreach from=$stats key=s item=stat}
+	{if $stat->userID == $App->user->id}
+		{assign var=p value=$s-2}
+		{if $p > 0}
+			{assign var=prevStat value=$stats.$p}
+			<tr class="even" style="color: #999999;">
+				<td style="padding: 0; width: 20px; text-align: center;">
+					<img src="http://image.eveonline.com/Character/{$prevStat->getUser()->getMainCharacter()->id}_32.jpg"
+						 style="height: 22px; margin: -1px;">
+				</td>
+				<td style="padding: 0; width: 20px; text-align: center;">
+					<img src="http://image.eveonline.com/Corporation/{$prevStat->getUser()->getMainCharacter()->corporationID}_32.png"
+						 style="height: 22px; margin: -1px;">
+				</td>
+				<td>
+					&nbsp; <b>{$p+1}</b>. &nbsp;
+					{$prevStat->getUser()->getMainCharacter()->name}&nbsp;
+				</td>
+				<td style="text-align: center;">
+					{$prevStat->nrSigs}
+				</td>
+				<td style="text-align: center;">
+					{$prevStat->nrWormholes}
+				</td>
+				{if $authGroup->getConfig('stats_kills')}
+					<td style="text-align: left; background-color: #{$prevStat->getScoreColor()}; color: #ffffff; font-weight: bold;">
+						&nbsp;{$prevStat->getScoreTitle()}&nbsp;
+					</td>
+				{/if}
+			</tr>
+		{/if}
+		{assign var=p value=$s-1}
+		{if $p >= 0}
+			{assign var=prevStat value=$stats.$p}
+			<tr class="even" style="color: #999999;">
+				<td style="padding: 0; width: 20px; text-align: center;">
+					<img src="http://image.eveonline.com/Character/{$prevStat->getUser()->getMainCharacter()->id}_32.jpg"
+						 style="height: 22px; margin: -1px;">
+				</td>
+				<td style="padding: 0; width: 20px; text-align: center;">
+					<img src="http://image.eveonline.com/Corporation/{$prevStat->getUser()->getMainCharacter()->corporationID}_32.png"
+						 style="height: 22px; margin: -1px;">
+				</td>
+				<td>
+					&nbsp; <b>{$p+1}</b>. &nbsp;
+					{$prevStat->getUser()->getMainCharacter()->name}&nbsp;
+				</td>
+				<td style="text-align: center;">
+					{$prevStat->nrSigs}
+				</td>
+				<td style="text-align: center;">
+					{$prevStat->nrWormholes}
+				</td>
+				{if $authGroup->getConfig('stats_kills')}
+					<td style="text-align: left; background-color: #{$prevStat->getScoreColor()}; color: #ffffff; font-weight: bold;">
+						&nbsp;{$prevStat->getScoreTitle()}&nbsp;
+					</td>
+				{/if}
+			</tr>
+		{/if}
+			<tr class="odd" style="color: #ffffff;">
 				<td style="padding: 0; width: 20px; text-align: center;">
 					<img src="http://image.eveonline.com/Character/{$stat->getUser()->getMainCharacter()->id}_32.jpg"
 						style="height: 22px; margin: -1px;">
@@ -90,15 +185,11 @@
 					<img src="http://image.eveonline.com/Corporation/{$stat->getUser()->getMainCharacter()->corporationID}_32.png"
 						style="height: 22px; margin: -1px;">
 				</td>
-				<td>
-					&nbsp;
-					<span style="font-weight: bold; font-size: 13px;">
-						{$s+1}
-					</span>
-					&nbsp;
-					{$stat->getUser()->getMainCharacter()->name}&nbsp;
+				<td style="font-weight: bold; font-size: 13px;">
+					&nbsp;{$s+1}.&nbsp;
+					<b>{$stat->getUser()->getMainCharacter()->name}</b>&nbsp;
 				</td>
-				<td style="text-align: center; {if $stat->nrSigs == 0}background-color: #CC0000; color: #FFFFFF; font-weight: bold;{/if}">
+				<td style="text-align: center;">
 					{$stat->nrSigs}
 				</td>
 				<td style="text-align: center;">
@@ -110,43 +201,71 @@
 				</td>
 			{/if}
 			</tr>
+		{assign var=n value=$s+1}
+		{if $n < $stats|@count}
+			{assign var=prevStat value=$stats.$n}
+			<tr class="even" style="color: #999999;">
+				<td style="padding: 0; width: 20px; text-align: center;">
+					<img src="http://image.eveonline.com/Character/{$prevStat->getUser()->getMainCharacter()->id}_32.jpg"
+						 style="height: 22px; margin: -1px;">
+				</td>
+				<td style="padding: 0; width: 20px; text-align: center;">
+					<img src="http://image.eveonline.com/Corporation/{$prevStat->getUser()->getMainCharacter()->corporationID}_32.png"
+						 style="height: 22px; margin: -1px;">
+				</td>
+				<td>
+					&nbsp; <b>{$n+1}</b>. &nbsp;
+					{$prevStat->getUser()->getMainCharacter()->name}&nbsp;
+				</td>
+				<td style="text-align: center;">
+					{$prevStat->nrSigs}
+				</td>
+				<td style="text-align: center;">
+					{$prevStat->nrWormholes}
+				</td>
+				{if $authGroup->getConfig('stats_kills')}
+					<td style="text-align: left; background-color: #{$prevStat->getScoreColor()}; color: #ffffff; font-weight: bold;">
+						&nbsp;{$prevStat->getScoreTitle()}&nbsp;
+					</td>
+				{/if}
+			</tr>
 		{/if}
-	{/foreach}
+		{assign var=n value=$s+2}
+		{if $n < $stats|@count}
+			{assign var=prevStat value=$stats.$n}
+			<tr class="even" style="color: #999999;">
+				<td style="padding: 0; width: 20px; text-align: center;">
+					<img src="http://image.eveonline.com/Character/{$prevStat->getUser()->getMainCharacter()->id}_32.jpg"
+						 style="height: 22px; margin: -1px;">
+				</td>
+				<td style="padding: 0; width: 20px; text-align: center;">
+					<img src="http://image.eveonline.com/Corporation/{$prevStat->getUser()->getMainCharacter()->corporationID}_32.png"
+						 style="height: 22px; margin: -1px;">
+				</td>
+				<td>
+					&nbsp; <b>{$n+1}</b>. &nbsp;
+					{$prevStat->getUser()->getMainCharacter()->name}&nbsp;
+				</td>
+				<td style="text-align: center;">
+					{$prevStat->nrSigs}
+				</td>
+				<td style="text-align: center;">
+					{$prevStat->nrWormholes}
+				</td>
+				{if $authGroup->getConfig('stats_kills')}
+					<td style="text-align: left; background-color: #{$prevStat->getScoreColor()}; color: #ffffff; font-weight: bold;">
+						&nbsp;{$prevStat->getScoreTitle()}&nbsp;
+					</td>
+				{/if}
+			</tr>
+		{/if}
+	{/if}
+{/foreach}
 		</table>
 		<br />
 
     </div>
     <div class="col6 last right">
-        <div class="message">
-            <ul>
-				<li style="color: #0088ff;"><b>Please contact (corp) leadership for any questions / concerns.</b></li>
-				<li>Signatures:</li>
-				<ul>
-					<li>Newly added signatures AND updated signatures are counted.</li>
-					<li>Updating a signature that was not changed will <u>not</u> count.</li>
-				</ul>
-				<li>Wormholes:</li>
-				<ul>
-					<li>New systems that are added / mapped.</li>
-				</ul>
-			{if $authGroup->getConfig('stats_kills')}
-				<li>Score:</li>
-				<ul>
-					<li>As you know we expect everyone to contribute to the alliance in some way.</li>
-					<li>Score is an attempt to measure this based on a few metrics, some of wich are:</li>
-					<ul>
-						<li>How much game time do you have?</li>
-						<li>How much you scan?</li>
-						<li>Do you fly logi or other support ships in fleets?</li>
-					</ul>
-					<li><b>Score is <u>not</u> meant to be a hard limit but more of an <u>indication</u> to help leadership provide insight in whats going on, as there are other ways to contribute that are hard to measure.</b></li>
-				</ul>
-				<li style="color: #0088ff;"><b>Please contact (corp) leadership for any questions / concerns.</b></li>
-			{/if}
-            </ul>
-        </div>
-        <div style="clear: both;"></div>
-        <br />
 		<table class="sectionoverview">
 			<tr>
 				<th class="large">Total Signatures scanned</th>
